Declaración de más atributos en la clase ListpedResponse y modificaciones en los archivos xml relacionados con la cabecera y el detalle de los pedidos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,9 @@
     <string name="textbtncancelar">Cancelar</string>
     <string name="textbtnregistrar">REGISTRAR</string>
     <string name="textbtnagregardetalle">AGREGAR DETALLE</string>
+    <string name="tvdescripcion">Descripción</string>
+    <string name="tviunidad">Unidad</string>
+    <string name="tvcantidad">Cantidad</string>
+    <string name="tvimporter">Importe</string>
+    <string name="tvacciones">Acciones</string>
 </resources>
