Implemetanción de la vista de edición y sus funcionalidades

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="ptidped">N°</string>
     <string name="textids">ID</string>
     <string name="btnactualizarlistado">Actualizar Listado</string>
+    <string name="modifypedfragmenttitle">Modificar Fragmento</string>
 </resources>
